--- a/app/frontend/public/index.html
+++ b/app/frontend/public/index.html
@@ -6,7 +6,7 @@
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
-            content="Dense Pixel Visualization for Attribution Techniques on Time Series"
+            content="DAVOTS: Dense Attribution Visualizations On Time Series"
         />
         <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>Dense Pixel Visualization for Attribution Techniques on Time Series</title>
+        <title>DAVOTS: Dense Attribution Visualizations On Time Series</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
